<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cespedes.tatiana.turismo.Informacion"
    android:orientation="vertical"
    android:layout_gravity="top"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informacion"
        style="@style/Titulos"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="25dp"
                >
                <ImageView
                    android:src="@drawable/mapa"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_weight="2"
                    />
                <ImageView
                    android:src="@drawable/escudo"
                    android:layout_width="match_parent"
                    android:layout_height="123dp"
                    android:layout_weight="2"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dato1_info"
                android:layout_weight="1"
                android:gravity="bottom"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dato2_info"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
